# backend/docs/swagger.json
@@ -30,8 +30,8 @@
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
@@ -88,6 +88,12 @@
                         "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/domain.AuthResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Required user name",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrResponse"
                         }
                     },
                     "401": {
@@ -172,12 +178,6 @@
                             }
                         }
                     },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/server.ErrResponse"
-                        }
-                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -221,13 +221,13 @@
                     },
                     {
                         "type": "string",
-                        "description": "Time to live",
+                        "description": "Time to live (i.Ex 300s, 1.5h or 2h45m). Valid time units are: 's', 'm', 'h')",
                         "name": "ttl",
                         "in": "query"
                     },
                     {
                         "type": "boolean",
-                        "description": "If informed, the file will be deleted after first download. A duration string is a possibly signed sequence of decimal numbers, each with optional fraction and a unit suffix, such as ",
+                        "description": "If informed, the file will be deleted after first download.",
                         "name": "delete-after-read",
                         "in": "query"
                     },
